2015-01-29  Tassilo Horn  <tsdh@gnu.org>

	* textmodes/reftex-vars.el (featurep): Conditionalize value of
	reftex-label-regexps in order to stay compatible with XEmacs 21.5
	which has no explicitly numbered groups in regexps (bug#19714).

2015-01-28  Tassilo Horn  <tsdh@gnu.org>

	* textmodes/reftex.el (reftex-syntax-table-for-bib): Give ( and )
	punctuation syntax since to allow bibtex fields with values such
	as {Test 1) and 2)} (bug#19205, bug#19707).
	(reftex--prepare-syntax-tables): New function.
	(reftex-mode): Use it.

2015-01-26  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	python.el: New non-global state dependent indentation engine.
	(Bug#18319, Bug#19595)

	* progmodes/python.el (python-syntax-comment-or-string-p): Accept
	PPSS as argument.
	(python-syntax-closing-paren-p): New function.
	(python-indent-current-level)
	(python-indent-levels): Mark obsolete.
	(python-indent-context): Return more context cases.
	(python-indent--calculate-indentation)
	(python-indent--calculate-levels): New functions.
	(python-indent-calculate-levels): Use them.
	(python-indent-calculate-indentation, python-indent-line):
	(python-indent-line-function): Rewritten to use new API.
	(python-indent-dedent-line): Simplify logic.
	(python-indent-dedent-line-backspace): Use `unless`.
	(python-indent-toggle-levels): Delete function.

2015-01-22  Wolfgang Jenkner  <wjenkner@inode.at>

	* calc/calc-units.el (math-units-in-expr-p)
	(math-single-units-in-expr-p, math-find-compatible-unit-rec)
	(math-extract-units): Handle the `neg' operator.  (Bug#19582)
	[Backport]

2015-01-21  Daniel Koning  <dk@danielkoning.com>  (tiny change)

	* subr.el (posnp): Correct docstring of `posnp'.
	(posn-col-row): Make it work with all mouse position objects.
	* textmodes/artist.el (artist-mouse-draw-continously): Cancel
	timers if an error occurs during continuous drawing.  (Bug#6130)

2015-01-20  Eli Zaretskii  <eliz@gnu.org>

	* button.el (button-activate, push-button): Doc fix.  (Bug#19628)
