@@ -1,3 +1,10 @@
+2015-01-30  Fabián Ezequiel Gallina  <fgallina@gnu.org>
+
+	* automated/python-tests.el (python-indent-pep8-1)
+	(python-indent-pep8-2, python-indent-pep8-3)
+	(python-indent-after-comment-2): Fix tests.
+	(python-indent-after-comment-3): New test.
+
 2015-01-26  Fabián Ezequiel Gallina  <fgallina@gnu.org>
 
 	* automated/python-tests.el (python-indent-pep8-1)
