@@ -1,3 +1,8 @@
+2015-01-30  Fabián Ezequiel Gallina  <fgallina@gnu.org>
+
+	* progmodes/python.el (python-indent-context): Respect user
+	indentation after comment.
+
 2015-01-29  Tassilo Horn  <tsdh@gnu.org>
 
 	* textmodes/reftex-vars.el (featurep): Conditionalize value of
